2004-12-28  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/fusion.c (__pthread_activate_vm): Fix startup protocol.

2004-12-27  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* nucleus/timer.c, include/nucleus/timer.h (xntimer_set_sched):
	Only define xntimer_set_sched for SMP.

2004-12-27  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/asm-uvm/system.h (xnarch_read_environ): Fix
	crash.
	
	* nucleus/shadow.c: Rewrite the whole hardening migration
	path. This solves the long-suffered "bad: scheduling while atomic"
	issue, both in UP and SMP configs. For this, we basically use a
	wait queue between the gatekeeper and xnshadow_harden(), so that
	synchronous wakeups of the former can be performed right after the
	latter went aslept, and _never_ before due to preemption
	artefacts.

2004-12-26  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/shadow.c (xnshadow_substitute_syscall): Fix
	__NR_getitimer.

2004-12-27  Philippe Gerum  <rpm@localhost>

	* nucleus/shadow.c (xnshadow_substitute_syscall): Discard useless
	migration flag; in any case, we know that we should migrate
	each time xnpod_shadow_p() is false.

2004-12-25  Philippe Gerum  <rpm@localhost>

	* nucleus/fusion.c (__pthread_start_timer_rt): Fix return code.

2004-12-24  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/types.h: Define ROOT_THREAD_INIT/EXIT for use in
	context-agnostic (kernel/uvm) apps.

	* fusion: __xeno_*_* -> __fusion_*_*.

	* include/nucleus/GNUmakefile.am: Optionally recurse into asm-uvm/
	during installation.

	* configure.in: Add -D_GNU_SOURCE -D_REENTRANT to
	RTAI_USER_CFLAGS.

2004-12-22  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* nucleus/Kconfig: Hide configuration of per-cpu timers. It is
	enabled by default and may be disabled only when "expert mode" is
	activated.

2004-12-21  Philippe Gerum  <rpm@xenomai.org>

	* sim: Fix a few glitches and update the necessary bits to run the
	RTAI skin.
